2024-01-14  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-lua-tutorial-intro): Added two sections about
	CLua1.lua.

2024-01-13  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-elinks.el (find-eloadhistory-links): new function.

	* eev-blinks.el (find-eloadhistory-for): new function.

	* eev-elinks.el (ee-find-efunction-links): use `find-eppp' instead
	of `find-epp' in more places.
	(ee-shorten-elc, ee-eloadhistory-fors)
	(ee-eloadhistory-find-flines): new functions.
	(ee-find-efunction-links): use `ee-eloadhistory-find-flines'.

2024-01-12  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-lua-tutorial-intro): new function.

	* eev-tlinks.el (find-luainit-links, find-luaso-links): new
	functions.

	* eev-intro.el (find-templates-intro): new section: "7. let*
	macros".
	(find-intro-intro): replace the `(cadr (ee-intro-sexp-here))' by
	an `(eval-defun nil)'.
	(find-intro-dual): replace the `(eval (ee-intro-sexp-here))' by an
	`(eval-defun nil)'.
	(ee-sexp-at, ee-intro-sexp-end-re, ee-intro-sexp-here): commented
	out.
	(ee-this-line0): deleted.
	(ee-this-line): use `ee-kl-line'.

	* eev-tlinks.el (ee-show2-do-with-fname0): renamed to
	`ee-let*-macro-show2-use'.

2024-01-11  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-let*-macro-links): new function.
	(ee-find-1stclassvideo-do-with-c): renamed to
	`ee-let*-macro-1stclassvideo-c'.

2024-01-07  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (ee-find-1stclassvideo-links): added an "LSubs:"
	line after "Play:".

2024-01-06  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (ee-find-1stclassvideo-do-with-c): new macro.
	(ee-find-1stclassvideo-links, ee-1stclassvideos-dlsubs): use
	`ee-find-1stclassvideo-do-with-c'.

	* eev-videolinks.el (find-2024gitvideo): new function.
	(ee-1stclassvideos-info): added an entry for "2024git".

2024-01-05  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-gitdoc-links): new function.
